# cs354r_p2

./: Assignment3GameManual.docx  BaseApplication.cpp  BaseApplication.h  Block.cpp  Block.h  Final Project Report  FinalProjectUpdate.txt  LevelParser.cpp  LevelParser.h  Makefile.am  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  README.txt  Room.cpp  Room.h  SGUI.cpp  SGUI.h  ServerIP.txt  Sound.cpp  Sound.h  Sphere.cpp  Sphere.h  Timer.h  TutorialApplication.cpp  TutorialApplication.h  User Manual.txt  concept.ai  configure.ac  desktop.ini  physics.h  resources.cfg
resources/: Brick.material  Brick.mesh  Brick.mesh.xml  Cube.mesh  Cube.mesh.xml  Custom.material  Handle.material  Material.001.material  Metal.material  Metal.mesh  Metal.mesh.xml  Pad.material  Paddle.mesh  Paddle.mesh.xml  Paper.material  Paper.mesh  Paper.mesh.xml  Sphere.mesh  Sphere.mesh.xml  Stone.material  Stone.mesh  Stone.mesh.xml  Wood.material  Wood.mesh  Wood.mesh.xml  ballgame1.scene  bluePad.material  bluePaddle.mesh  pinkPad.material  pinkPaddle.mesh
